--- a/legal/cookies.html
+++ b/legal/cookies.html
@@ -22,12 +22,12 @@
     <meta name="description" content="Amor y algo más es un espacio social dónde encontrarás artículos, escritos, noticias y más." />
     <meta property="fb:app_id" content="807980679724387">
     <meta property="fb:pages" content="107292547459829" />
-    <link rel="canonical" href="https://amoryalgomas.com/legal/cookies.html" />
+    <link rel="canonical" href="https://amoryalgomas.com/legal/cookies" />
     <meta property="og:locale" content="es" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Amor Y Algo Más | Politica De Cookies" />
     <meta property="og:description" content="Amor y algo más es un espacio social dónde encontrarás artículos, escritos, noticias y más." />
-    <meta property="og:url" content="https://amoryalgomas.com/legal/privacy.html" />
+    <meta property="og:url" content="https://amoryalgomas.com/legal/privacy" />
     <meta property="og:image" content="https://amoryalgomas.com/images/headeramoryalgomas.jpg" />
     <meta property="og:image:secure_url" content="https://amoryalgomas.com/images/headeramoryalgomas.jpg" />
     <meta property="og:image:width" content="1280" />
@@ -42,21 +42,6 @@
     <meta property="twitter:image:src" content="https://amoryalgomas.com/images/headeramoryalgomas.jpg">
     <meta property="twitter:image:width" content="1280">
     <meta property="twitter:image:height" content="640">
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158187435-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-158187435-1');
-
-    </script>
-    <!-- END Global site tag (gtag.js) - Google Analytics -->
 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300, 400,700|Inconsolata:400,700" rel="stylesheet">
 
@@ -74,8 +59,7 @@
 </head>
 
 <body>
-
-
+   <!-- Header -->
     <div class="wrap">
         <header role="banner">
             <div class="top-bar">
@@ -94,16 +78,12 @@
                 <div class="row pt-5">
                     <div class="col-12 text-center">
                         <a class="absolute-toggle d-block d-md-none" data-toggle="collapse" href="#navbarMenu" role="button" aria-expanded="false" aria-controls="navbarMenu"><span class="burger-lines"></span></a>
-                        <h1 class="site-logo"><a href="http://amoryalgomas.com">Amor Y Algo Más</a></h1>
+                        <h1 class="site-logo"><a href="http://amoryalgomas.com">AYAM</a></h1>
                     </div>
                 </div>
             </div>
         </header>
         <!-- END header -->
-
-
-
-
         <section class="site-section py-lg">
             <div class="container">
                 <div class="post-content-body">
@@ -190,47 +170,60 @@
             </div>
         </section>
     </div>
-
     <footer class="site-footer">
         <div class="container">
+           <!-- Copyright --->
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <p class="small">
+                    <p class="small">&copy; <script>
+								document.write(new Date().getFullYear());
 
-                        <!-- END Copyright -->
-                        Copyright &copy; Andre LLC <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-                        <script>
-                            document.write(new Date().getFullYear());
-
-                        </script> All Rights Reserved |<a href="https://amoryalgomas.com"> Amor Y Algo Más</a>
-                        <!-- END Copyright -->
-
-                    </p>
+							</script> <a href="https://amoryalgomas.com">AYAM</a> | All Rights Reserved <script data-cfasync="false" src="//cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+						</p>
                 </div>
             </div>
+            <!-- ENDCopyright --->
         </div>
     </footer>
-    <!-- END footer -->
+<!-- loader -->
+	<div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
+			<circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
+			<circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#993333" /></svg></div>
+	<!-- END loader -->
 
+	<script src="/jsjquery-3.2.1.min.js"></script>
+	<script src="/jsjquery-migrate-3.0.0.js"></script>
+	<script src="/jspopper.min.js"></script>
+	<script src="/jsbootstrap.min.js"></script>
+	<script src="/jsowl.carousel.min.js"></script>
+	<script src="/jsjquery.waypoints.min.js"></script>
+	<script src="/jsjquery.stellar.min.js"></script>
 
-    <!-- loader -->
-    <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
-            <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-            <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#993333" /></svg></div>
-    <!-- END loader -->
+	<script src="/jsmain.js"></script>
+	<script>
+		if ('serviceWorker' in navigator) {
+			navigator.serviceWorker.register('/sw.js')
+				.then(reg => console.log('Registro de SW exitoso', reg))
+				.catch(err => console.warn('Error al tratar de registrar el sw', err))
+		}
 
-    <script src="/js/jquery-3.2.1.min.js"></script>
-    <script src="/js/jquery-migrate-3.0.0.js"></script>
-    <script src="/js/popper.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/owl.carousel.min.js"></script>
-    <script src="/js/jquery.waypoints.min.js"></script>
-    <script src="/js/jquery.stellar.min.js"></script>
+	</script>
 
+	<!-- Cookie Consent -->
+	<script src="/jscookie-consent.js"></script>
+	<script type="text/javascript">
+		document.addEventListener('DOMContentLoaded', function() {
+			cookieconsent.run({
+				"notice_banner_type": "headline",
+				"consent_type": "implied",
+				"palette": "light",
+				"language": "es",
+				"website_name": "Amor Y Algo M&aacute;s"
+			});
+		});
 
-    <script src="/js/main.js"></script>
-    <script src="/script.js"></script>
-
+	</script>
+	<!-- End Cookie Consent -->
 
 </body>
 
