--- a/legal/cookies.html
+++ b/legal/cookies.html
@@ -17,16 +17,16 @@
     <link rel="apple-touch-icon" href="/images/icons/ayam-favicon.ico">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-web-app-title" content="Amor Y Algo Más | Política De Cookies">
-    <title>Amor Y Algo Más | Política De Cookies</title>
-    <meta name="description" content="Amor y algo más es un espacio social dónde encontrarás artículos, escritos, noticias y más." />
+    <meta name="apple-web-app-title" content="Amor Y Algo M&aacute;s | Pol&eacute;tica De Cookies">
+    <title>Amor Y Algo M&aacute;s | Pol&eacute;tica De Cookies</title>
+    <meta name="description" content="Amor y algo m&aacute;s es un espacio social d&eacute;nde encontrar&aacute;s art&eacute;culos, escritos, noticias y m&aacute;s." />
     <meta property="fb:app_id" content="807980679724387">
     <meta property="fb:pages" content="107292547459829" />
     <link rel="canonical" href="https://amoryalgomas.com/legal/cookies" />
     <meta property="og:locale" content="es" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Amor Y Algo Más | Politica De Cookies" />
-    <meta property="og:description" content="Amor y algo más es un espacio social dónde encontrarás artículos, escritos, noticias y más." />
+    <meta property="og:title" content="Amor Y Algo M&aacute;s | Politica De Cookies" />
+    <meta property="og:description" content="Amor y algo m&aacute;s es un espacio social d&eacute;nde encontrar&aacute;s art&eacute;culos, escritos, noticias y m&aacute;s." />
     <meta property="og:url" content="https://amoryalgomas.com/legal/privacy" />
     <meta property="og:image" content="https://amoryalgomas.com/images/headeramoryalgomas.jpg" />
     <meta property="og:image:secure_url" content="https://amoryalgomas.com/images/headeramoryalgomas.jpg" />
@@ -37,8 +37,8 @@
     <meta property="twitter:creator" content="@amoryalgomaspag">
     <meta property="twitter:creator:id" content="1224143030300573697">
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:title" content="Amor Y Algo Más | Politica De Cookies">
-    <meta name="twitter:description" content="Amor y algo más es un espacio social dónde encontrarás artículos, escritos, noticias y más." />
+    <meta property="twitter:title" content="Amor Y Algo M&aacute;s | Politica De Cookies">
+    <meta name="twitter:description" content="Amor y algo m&aacute;s es un espacio social d&eacute;nde encontrar&aacute;s art&eacute;culos, escritos, noticias y m&aacute;s." />
     <meta property="twitter:image:src" content="https://amoryalgomas.com/images/headeramoryalgomas.jpg">
     <meta property="twitter:image:width" content="1280">
     <meta property="twitter:image:height" content="640">
@@ -88,9 +88,9 @@
             <div class="container">
                 <div class="post-content-body">
                     <h2 style="text-align: center;">
-                        <strong>Política De Cookies</strong>
+                        <strong>Pol&eacute;tica De Cookies</strong>
                     </h2>
-                    <p style="text-align: center;">Última Actualización: Enero 12, 2020</p>
+                    <p style="text-align: center;">&eacute;ltima Actualizaci&eacute;n: Enero 12, 2020</p>
 
                     <p>This Cookies Policy explains what Cookies are and how We use them. You should read this policy so You can understand what type of cookies We use, or the information We collect using Cookies and how that information is used.</p>
 
@@ -114,7 +114,7 @@
                         <li><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our" in this Cookies Policy) refers to Andre LLC, Cra. 19 #10B-44 SAN 687542.</li>
                         <li><strong>You</strong> means the individual accessing or using the Website, or a company, or any legal entity on behalf of which such individual is accessing or using the Website, as applicable.</li>
                         <li><strong>Cookies</strong> means small files that are placed on Your computer, mobile device or any other device by a website, containing details of your browsing history on that website among its many uses.</li>
-                        <li><strong>Website</strong> refers to Amor Y Algo Más, accessible from https://amoryalgomamoryalgomas.com.</li>
+                        <li><strong>Website</strong> refers to Amor Y Algo M&aacute;s, accessible from https://amoryalgomamoryalgomas.com.</li>
                     </ul>
 
                     <h1>The use of the Cookies</h1>
@@ -151,7 +151,7 @@
 
                     <p>For any other web browser, please visit your web browser's official web pages.</p>
 
-                    <h2>Más Información Sobre Las Cookies</h2>
+                    <h2>M&aacute;s Informaci&eacute;n Sobre Las Cookies</h2>
                     <p>You can learn more about Cookies at the following third-party websites:</p>
 
                     <ul>
@@ -163,7 +163,7 @@
 
                     <ul>
                         <li>Por email: amoryalgomaspage@gmail.com</li>
-                        <li>Por número de Teléfono: +573013507441</li>
+                        <li>Por n&eacute;mero de Tel&eacute;fono: +573013507441</li>
                     </ul>
 
                 </div>
